fixed spacing issue

--- a/styles/banner.module.css
+++ b/styles/banner.module.css
@@ -5,7 +5,3 @@
     width: 9px;
     margin: 0 10px;
 }
-
-.banner p {
-    /* margin: 0; */
-}
